--- a/control.css
+++ b/control.css
@@ -1,12 +1,20 @@
 body {
 font-family: sans-serif;
+background-color: #33cbff;
 }
 h1{
 	padding: 12px;
 	background-color: black;
 	color: red;
 	border-radius: 10px;
-}       
+} 
+img.nice{
+	width: 100%;
+	margin: auto;
+}
+h1.header {
+	font-size: 60;
+}     
 ul.menu {
 	border-style: solid;
     border-width: 1px;
@@ -32,7 +40,7 @@ ul.menu li a:hover{
 	text-decoration:underline;
 }
 article {
-	float: left;
+	float: center;
 	padding: 1em;
 }
 aside{
@@ -58,10 +66,4 @@ th, td{
 	padding: 0.5em;
 	text-align: left;
 }
-
-
-
-
-
-
 
