--- a/control.css
+++ b/control.css
@@ -21,6 +21,7 @@ ul.menu {
     padding: 10px;
     border-radius: 10px;
     background-color: black;
+    font-size: 60;
 }
 ul.menu li{
 	list-style-type: none;
