--- a/control.css
+++ b/control.css
@@ -1,6 +1,6 @@
 body {
-font-family: sans-serif;
-background-color: #33cbff;
+	font-family: sans-serif;
+	background-color: #33cbff;
 }
 h1{
 	padding: 12px;
@@ -8,16 +8,17 @@ h1{
 	color: red;
 	border-radius: 10px;
 } 
+h1.header {
+	font-size: 60;
+	text-align: center;
+} 
 p{
 	font-size: 1.5em;
-}
+} 
 img.nice{
 	width: 100%;
 	margin: auto;
-}
-h1.header {
-	font-size: 60;
-}     
+}   
 ul.menu {
 	border-style: solid;
     border-width: 1px;
@@ -31,17 +32,21 @@ ul.menu li{
 	display: inline;
 	margin-right: 10px;
 	margin-left: 10px;
+	font-size: 30;
 }
 ul.menu li a{
 	color: white;
 	text-decoration: none;
+	font-size: 30;
 }
 ul.menu li.selected{
 	color: red;
+	font-size: 30;
 }
 ul.menu li a:hover{
 	color: #99DDFF;
 	text-decoration:underline;
+	font-size: 30;
 }
 article {
 	float: center;
@@ -70,4 +75,3 @@ th, td{
 	padding: 0.5em;
 	text-align: left;
 }
-
